--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-4 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=edrop1.site.live/index.html">
+	<!-- <meta HTTP-EQUIV="Refresh" CONTENT="0; URL=edrop1.site.live/index.html"> --!>
 
 
 <!-- ==================== Start epilogue ==================== -->
