--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta http-equiv="refresh" content="0;url=edrop1.site.live/index.html">
+    <meta http-equiv="refresh" content="0;url=https://edroprides.github.io/edrop1.site.live/index.html">
     <!-- Other head elements -->
 </head>
 <body>
