--- a/edrop1.site.live/index.html
+++ b/edrop1.site.live/index.html
@@ -1524,7 +1524,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                 <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 noCustomElement">
                     <div class="noPostBlogHrWrap"><hr class="noPostBlogHr"></div>
                     <!-- <div id="noPostBlogTitleWrap"><h2 id="noPostBlogTitle" altonclick="null" althref="null" class="">Coming Soon...<br></h2></div> -->
-                    <div id="noPostBlogTitleWrap"><h2>Download </h2>h1<a href="tinyurl.com/edrop-app" >E-Drop App</a></div>
+                    <div id="noPostBlogTitleWrap"><h2>Download </h2>h1<a href="https://tinyurl.com/edrop-app" >E-Drop App</a></div>
                     <div class="noPostBlogHrWrap"><hr class="noPostBlogHr"></div>
                 </div>
             </div>
