--- a/edrop1.site.live/index.html
+++ b/edrop1.site.live/index.html
@@ -1253,7 +1253,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                                 <div class="teamMemberWrapOuter innerGridTable noCustomElement">
                                     <div class="teamMemberWrap innerTableContent noCustomElement">
                                         <div class="teamMemberImage"><img class="teamMemberImages" src="img/eE6H0-aXryH-eR5vA-q00kW-UcW1T.jpg" altonclick="null" althref="null" style="margin-left: 0px; margin-top: 0px;"></div>
-                                        <div class="teamMemberNameWrap"><h3 class="teamMemberName" altonclick="null" althref="null">Maimoon<br></h3></div>
+                                        <div class="teamMemberNameWrap"><h3 class="teamMemberName" altonclick="null" althref="null">Maimoona<br></h3></div>
                                         <div class="teamMemberTitleWrap"><h3 class="teamMemberTitle" altonclick="null" althref="null">Database Manager<br></h3></div>
                                         <div class="teamMemberTextWrap"><p class="teamMemberText" altonclick="null" althref="null">Database management is done by Maimoona, who is also familiar with SQL and other query languages.<br></p></div>
                                         <div class="teamIconRow">
