--- a/edrop1.site.live/index.html
+++ b/edrop1.site.live/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta id="descriptionTag" name="description" content="This is a description for the site.">
     <title>E-Drop</title>
-    <link id="favicon" rel="icon" href="../heyleia.com/images/favicon.png">
+    <link id="favicon" rel="icon" href="img/IRoUm-l8TrF-kXyuX-jlIMT-7YLoZ.png">
     <script src="../code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript" src="../maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <link href="../use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
