--- a/edrop1.site.live/index.html
+++ b/edrop1.site.live/index.html
@@ -774,7 +774,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                             <div class="featuresTemplate outerGrid col-sm-4 noCustomElement">
                                 <div class="innerGridTable noCustomElement">
                                     <div class="featuresTemplateInner innerTableContent noCustomElement">
-                                        <div class="featuresHeaderWrap"><h5 class="featuresHeader" altonclick="null" althref="null">E-Cargo 
+                                        <div class="featuresHeaderWrap"><h5 class="featuresHeader" altonclick="null" althref="null">E-Shipping 
 </h5></div>
                                         <div class="featuresHrWrap"><hr class="featuresHr"></div>
                                         <div class="outerGrid col-sm-12 col-xs-12 noCustomElement">
@@ -928,7 +928,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                                                     <div class="featuresIconRow row">
                                                         <div class="featuresIconOuter outerGrid col-lg-4 col-lg-offset-1 col-sm-4 col-xs-4 noCustomElement">
                                                             <div class="innerGridTable noCustomElement">
-                                                                <div class="featuresIcons innerTableContent"><i class="featuresIcon featuresIcon fas fa-adjust" altonclick="null" althref="null"></i></div>
+                                                                <div class="featuresIcons innerTableContent"><i class="featuresIcon featuresIcon fas fa-phone" altonclick="null" althref="null"></i></div>
                                                             </div>
                                                         </div>
                                                         <div class="outerGrid col-lg-6 col-sm-8 col-xs-8 noCustomElement">
@@ -945,7 +945,65 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                                     </div>
                                 </div>
                             </div>
-                            </div><!-- featuresTemplate end -->
+                            </div><div class="features3 row noCustomElement">
+                                <div class="featuresTemplate outerGrid col-sm-4 noCustomElement">
+                                    <div class="innerGridTable noCustomElement">
+                                        <div class="featuresTemplateInner innerTableContent noCustomElement">
+                                            <div class="featuresHeaderWrap"><h5 class="featuresHeader" altonclick="null" althref="null">E-Cargo</h5></div>
+                                            <div class="featuresHrWrap"><hr class="featuresHr"></div>
+                                            <div class="outerGrid col-sm-12 col-xs-12 noCustomElement">
+                                                <div class="innerGridTable noCustomElement">
+                                                    <div class="innerTableContent noCustomElement">
+                                                        <div class="featuresIconRow row">
+                                                            <div class="featuresIconOuter outerGrid col-lg-4 col-lg-offset-1 col-sm-4 col-xs-4 noCustomElement">
+                                                                <div class="innerGridTable noCustomElement">
+                                                                    <div class="featuresIcons innerTableContent"><i class="featuresIcon featuresIcon fas fa-car" altonclick="null" althref="null"></i></div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="outerGrid col-lg-6 col-sm-8 col-xs-8 noCustomElement">
+                                                                <div class="innerGridTable noCustomElement">
+                                                                    <div class="featuresTextWrap innerTableContent noCustomElement">
+                                                                        <p class="featuresText" altonclick="null" althref="null">E-Cargp offers a goods transport service through which goods can be transported from place to place.</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                                <div class="featuresTemplate outerGrid col-sm-4 noCustomElement">
+                                    <div class="innerGridTable noCustomElement">
+                                        <div class="featuresTemplateInner innerTableContent noCustomElement">
+                                            <div class="featuresHeaderWrap"><h5 class="featuresHeader" altonclick="null" althref="null">E-Cab</h5></div>
+                                            <div class="featuresHrWrap"><hr class="featuresHr"></div>
+                                            <div class="outerGrid col-sm-12 col-xs-12 noCustomElement">
+                                                <div class="innerGridTable noCustomElement">
+                                                    <div class="innerTableContent noCustomElement">
+                                                        <div class="featuresIconRow row">
+                                                            <div class="featuresIconOuter outerGrid col-lg-4 col-lg-offset-1 col-sm-4 col-xs-4 noCustomElement">
+                                                                <div class="innerGridTable noCustomElement">
+                                                                    <div class="featuresIcons innerTableContent"><i class="featuresIcon featuresIcon fas fa-taxi" altonclick="null" althref="null"></i></div>
+                                                                </div>
+                                                            </div>
+                                                            <div class="outerGrid col-lg-6 col-sm-8 col-xs-8 noCustomElement">
+                                                                <div class="innerGridTable noCustomElement">
+                                                                    <div class="featuresTextWrap innerTableContent noCustomElement">
+                                                                        <p class="featuresText" altonclick="null" althref="null">E-Cab in the E-Drop focuses on online cab system which focuses on transporting passengers to thier desired location.</p>
+                                                                    </div>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                </div> <!-- featuresTemplate end -->
                     </div>
                 </div>
             </div>
@@ -1517,7 +1575,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
         <div id="blogContent" class="sectionContent container-fluid noCustomElement">
             <div class="row noCustomElement">
                 <div id="blogTitleWrap" class="col-sm-10 col-sm-offset-1">
-                    <h2 id="blogTitle" class="blogTitles" altonclick="null" althref="null">POSTS<br></h2>
+                    <h2 id="blogTitle" class="blogTitles" style="color: white;" altonclick="null" althref="null">POSTS<br></h2>
                 </div>
             </div>
             <div id="noPostBlog" class="row noCustomElement" style="display: none;">
