--- a/edrop1.site.live/index.html
+++ b/edrop1.site.live/index.html
@@ -1582,7 +1582,7 @@ Your ride with E-Drop is not just a trip; it's a step toward a more connected an
                 <div class="col-lg-8 col-lg-offset-2 col-sm-10 col-sm-offset-1 noCustomElement">
                     <div class="noPostBlogHrWrap"><hr class="noPostBlogHr"></div>
                     <!-- <div id="noPostBlogTitleWrap"><h2 id="noPostBlogTitle" altonclick="null" althref="null" class="">Coming Soon...<br></h2></div> -->
-                    <div id="noPostBlogTitleWrap"><a href="https://tinyurl.com/edrop-app" target="_blank"><button class="contactButton" type="button">Download Edrop</button></a></div>
+                    <div id="noPostBlogTitleWrap"><a href="https://github.com/Musaddiq-Sultan/e_drop/blob/main/apk/E-Drop.apk?raw=true" target="_blank"><button class="contactButton" type="button">Download Edrop</button></a></div>
                     <div class="noPostBlogHrWrap"><hr class="noPostBlogHr"></div>
                 </div>
             </div>
